<resources>
    <string name="app_name">Just Java</string>
    <string name="user_hint">Enter Your Name</string>
    <string name="toppings">Toppings</string>
    <string name="toppings_item1">Whipped Cream</string>
    <string name="toppings_item2">ChocoBar</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_price">Total: $ 0</string>
    <string name="submit_order">order</string>

</resources>