<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/user_hint"
            android:inputType="textPersonName"
            android:autofillHints="name" />

        <TextView
            style="@style/titles"
            android:text="@string/toppings" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/whipped_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" />

            <TextView
                style="@style/sub_titles"
                android:text="@string/toppings_item1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/choco_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" />

            <TextView
                style="@style/sub_titles"
                android:text="@string/toppings_item2" />
        </LinearLayout>

        <TextView
            style="@style/titles"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:onClick="decrementCoffees"
                android:text="-"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="incrementCoffees"
                android:text="+"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            style="@style/titles"
            android:text="@string/order_summary" />

        <TextView
            android:id="@+id/order_text_view"
            style="@style/titles"
            android:text="@string/total_price" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:onClick="submitOrder"
            android:text="@string/submit_order" />
    </LinearLayout>
</ScrollView>